bista_superasia_theme/static/src/scss/style.css
/* ... */
a, .btn-link {
  color: #ac1520;
}

a:hover, .btn-link:hover {
  color: #ac1520;
  text-decoration: none;
}
.bg-dark-opacity{
  background:rgba(0, 0, 0, 0.6);
}
.custom-control a:hover {
  text-decoration: underline;
}
.live-text{
  position: absolute;
  align-content: center;
  bottom: 18%;
  left: 42%;
}
.count-box-new .live-text h5{
  letter-spacing: 3px;
  color: #ffffff;
  font-weight: 700;
  font-size: 1.50em;
}
h1, h2, h3, h4, h5, h6, .font-primary {
  /*font-family: "Raleway", sans-serif;*/
  color: #ac1520;
  /*font-weight: 600;*/
}
.btn-primary{
  color: #333333;
  border: 1px solid #ced4da;
  padding: .15rem 1.0rem !important;
  font-size: 16px;
  border-left: 1px solid transparent;
  /* font-weight: 600; */
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  background-color: transparent;
  height: calc(1.5em + .75rem + -1px);
  box-shadow: inherit;
}
.btn-primary:hover, .btn-primary:active {
  color: #fff;
  background-color: #ced4da;
  border-color: #ced4da;
}
.hover-flag-dropdown{
  position: fixed;
  top: 90%;
  width: 4vw;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: .5vw;
  -webkit-transform: translateY(.8vw);
  transform: translateY(.8vw);
  transition: .4s opacity cubic-bezier(.19,1,.22,1),.4s -webkit-transform cubic-bezier(.19,1,.22,1);
  transition: .4s transform cubic-bezier(.19,1,.22,1),.4s opacity cubic-bezier(.19,1,.22,1);
  transition: 0.3s transform cubic-bezier(.19,1,.22,1),.4s opacity cubic-bezier(.19,1,.22,1),.4s -webkit-transform cubic-bezier(.19,1,.22,1);
}
.hover-flag-dropdown:hover{
  -webkit-transform: translateY(-0.1vw);
  transform: translateY(-0.1vw);
}    
/*--------------------------------------------------------------
# Back to top button
--------------------------------------------------------------*/
.back-to-top {
  position: fixed;
  display: none;
  width: 40px;
  height: 40px;
  border-radius: 3px;
  right: 15px;
  bottom: 15px;
  background: #C01921;
  color: #fff;
  transition: display 0.5s ease-in-out;
  z-index: 99999;
}

.back-to-top i {
  font-size: 24px;
  position: absolute;
  top: 8px;
  left: 8px;
}

.back-to-top:hover {
  color: #ffffff;
  background: #C01921;
  transition: background 0.2s ease-in-out;
}

/*--------------------------------------------------------------
# Top Bar
--------------------------------------------------------------*/
#topbar {
  background: #fff;
  padding: 10px 0;
  border-bottom: 1px solid #eee;
  font-size: 14px;
}

#topbar .contact-info a {
  line-height: 1;
  color: #444;
  transition: 0.3s;
}

#topbar .contact-info a:hover {
  color: #428bca;
}

#topbar .contact-info i {
  color: #428bca;
  padding: 4px;
}

#topbar .contact-info .icofont-phone {
  padding-left: 20px;
  margin-left: 10px;
}

#topbar .social-links a {
  color: #ac1520;
  padding: 4px 12px;
  display: inline-block;
  line-height: 1px;
  transition: 0.3s;
}

#topbar .social-links a:hover {
  color: #428bca;
}

/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
#header {
  height: 100px;
  transition: all 0.5s;
  transition: all 0.5s;
  /*padding: 10px 0 0;*/
  background: #fff;
  z-index: 997;
  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
}
.header-align{
  padding: 30px 0 0;
}
#top_menu{
  width: 100%;
  background: #F5F5F5;
  padding: 10px 0;
  margin-bottom: 1em;
}
#top_menu a{
  color:#202020;
}
.top-menu-login a{

}
#header.header-scrolled {
      background: rgb(255 255 255 / 80%);
}

#header .logo h1 {
  font-size: 28px;
  margin: 0;
  padding: 10px 0;
  line-height: 1;
  font-weight: 400;
  letter-spacing: 3px;
  text-transform: uppercase;
}
#header .logo div {
/*  padding: 10px 0 0;*/
}  
#header .logo h1 a, #header .logo h1 a:hover {
  color: #1c5c93;
  text-decoration: none;
}

#header .logo img {
  padding: 0;
  margin: 0;
  max-height: 60px;
}

.sticky-wrapper-left-panel {
position: relative;
opacity: 0;

}
.sticky-wrapper {
    /*height: 0!important;*/
    position: relative;
    z-index: 99999;
    width: 100%;
    /*opacity: 0.8;*/
    background:rgb(255 255 255 / 80%);;
}
/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
/* Desktop Navigation */
.nav-menu, .nav-menu * {
  margin: 0;
  padding: 0;
  list-style: none;
}
.mail-link > ul > li{
  list-style: none; 
}
.mail-link a {
    font-size: 14px;
    font-weight: 400;
    color: #ac1520;
}

.nav-menu > ul > li {
  position: relative;
  white-space: nowrap;
  float: left;
  border-right: 1px solid #707070;
}

/*.nav-menu a {
  text-transform: uppercase;
  font-weight: 600;
  display: block;
  position: relative;
  color: #000000;
  padding: 5px 15px 21px 10px;
  transition: 0.3s;
  font-size: 14px;
  font-family: "Open Sans", sans-serif;
}*/
li.active {
    /*border-bottom: 5px solid #ac1520;*/
}
.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
  color: #707070;
  text-decoration: none;
}
#signup{
    width: 100%;
    height: calc(100vh);
    padding: 0;
    overflow: hidden;
}
.nav-menu .drop-down ul {
  display: block;
  position: absolute;
  left: 0;
  top: 100%;
  z-index: 99;
  opacity: 0;
  visibility: hidden;
  padding: 10px 0;
  background: #fff;
  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
  transition: ease all 0.3s;
}

.nav-menu .drop-down:hover > ul {
  opacity: 1;
  top: 100%;
  visibility: visible;
}

.nav-menu .drop-down li {
  min-width: 180px;
  position: relative;
}

.nav-menu .drop-down ul a {
  padding: 10px 20px;
  font-size: 14px;
  font-weight: 500;
  text-transform: none;
  color: #103453;
}

.nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
  color: #15A14A;
}
/* ... */

